--- a/code/STT_search_bot.ipynb
+++ b/code/STT_search_bot.ipynb
@@ -37,9 +37,9 @@
     "import json\n",
     "\n",
     "url = 'https://kauth.kakao.com/oauth/token'\n",
-    "client_id = 'd0075e25e596cc2a8efa6957de24fffe' #AY RestAPI\n",
-    "redirect_uri = 'https://upstage16sts.com/oauth' #AY page\n",
-    "code = 'XpB180G-sTjJHp7QhP4p1poy2DbcLckGDw5NCyhnj6C3THAS1NqegIpG0A8KPXSZAAABjuHkYZABl6J2VXah6g' #AY code\n",
+    "client_id = 'AY RestAPI' #AY RestAPI\n",
+    "redirect_uri = 'AY page' #AY page\n",
+    "code = 'AY code' #AY code\n",
     "\n",
     "data = {\n",
     "    'grant_type':'authorization_code',\n",
@@ -68,8 +68,8 @@
     "url = \"https://kauth.kakao.com/oauth/token\"\n",
     "data = {\n",
     "    \"grant_type\": \"refresh_token\",\n",
-    "    \"client_id\": \"d0075e25e596cc2a8efa6957de24fffe\",\n",
-    "    \"refresh_token\": \"JHy3Wj16WZK7TkJ3SusIPxm-yN6dLLxfTRgKKwynAAABjuHlVI7GDcCf5rkkeA\"\n",
+    "    \"client_id\": \"client_id\",\n",
+    "    \"refresh_token\": \"refesh_token\"\n",
     "}\n",
     "response = requests.post(url, data=data)\n",
     "tokens = response.json()\n",
@@ -276,7 +276,7 @@
     "\n",
     "\n",
     "# Usage example\n",
-    "webhook_url = 'https://hooks.slack.com/services/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'\n",
+    "webhook_url = 'https://hooks.slack.com/services/hook'\n",
     "searcher = NaverNewsSearcher(webhook_url)\n",
     "\n",
     "def process_voice_input(audio):\n",
